--- a/pages/mtc.html
+++ b/pages/mtc.html
@@ -12,7 +12,7 @@
 <body>
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"><img src="/images/thsmLogo.png" width="80px"/>My Mission</a>
+    <a class="navbar-brand" href="../index.html"><img src="/images/thsmLogo.png" width="80px"/>My Mission</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
