add footer, fix margin, polaroid, etc

--- a/pages/mtc.html
+++ b/pages/mtc.html
@@ -103,6 +103,8 @@
         
       </div>
   </div>
+
+
   <h2>Week 2</h2>
   <hr>
   <div class="container">
@@ -169,6 +171,13 @@
 </div>
   </div>
 
+
+  <footer>
+    <a href="../index.html">Home </a>
+    <a href="#"> MTC </a>
+    <a href="h8.html"> Houston 8 </a>
+    <a href="manvel.html"> Manvel </a>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
