--- a/index.html
+++ b/index.html
@@ -42,26 +42,34 @@
   <div class="areaContainer">
       <div class="areaTiles">
           <a href="/pages/mtc.html"><div class="areaTile">
-            <h2>Provo MTC</h2>
             <img src="/images/mtcdropoff.jpg"/>
+            <h2>Provo MTC</h2>
           </div></a>
           <a href="/pages/h8.html"><div class="areaTile">
-            <h2>Houston 8 (Spanish)</h2>
             <img src="/images/onemonth.jpeg"/>
+            <h2>Houston 8 (Spanish)</h2>
           </div></a>
           <a href="/pages/manvel.html"><div class="areaTile">
-              <h2>Manvel</h2>
               <img src="/images/hnaCrookston.jpg"/>
+              <h2>Manvel</h2>
         </div></a>
       </div>
   </div>
 
   
+  <footer>
+    <a href="#">Home </a>
+    <a href="/pages/mtc.html"> MTC </a>
+    <a href="/pages/h8.html"> Houston 8 </a>
+    <a href="/pages/manvel.html"> Manvel </a>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
+
+ 
 
 </html>
