add week 3 pics

--- a/pages/h8.html
+++ b/pages/h8.html
@@ -51,19 +51,19 @@
 
              <div class="masonry">
 
-                <div class="item"><img src="../images/h8/closet.jpg"></div>
-                <div class="item"><img src="../images/h8/day3.jpg"></div>
-                <div class="item"><img src="../images/h8/day6.jpg"></div>
-                <div class="item"><img src="../images/h8/day6again.jpg"></div>
-                <div class="item"><img src="../images/h8/devotional.jpg"></div>
-                <div class="item"><img src="../images/h8/districtmoses.jpg"></div>
-                <div class="item"><img src="../images/h8/firstselfie.jpg"></div>
-                <div class="item"><img src="../images/h8/graypants.jpg"></div>
-                <div class="item"><img src="../images/h8/hnacollins.jpg"></div>
-                <div class="item"><img src="../images/h8/mademybed.jpg"></div>
-                <div class="item"><img src="../images/h8/pointingtohouston.jpg"></div>
-                <div class="item"><img src="../images/h8/snow.jpg"></div>
-                <div class="item"><img src="../images/h8/stpatricksday.jpg"></div>
+                <div class="item"><img src="../images/h8/week31.jpg"></div>
+                <div class="item"><img src="../images/h8/week310.jpg"></div>
+                <div class="item"><img src="../images/h8/week311.jpg"></div>
+                <div class="item"><img src="../images/h8/week312.jpg"></div>
+                <div class="item"><img src="../images/h8/week313.jpg"></div>
+                <div class="item"><img src="../images/h8/week32.jpg"></div>
+                <div class="item"><img src="../images/h8/week33.jpg"></div>
+                <div class="item"><img src="../images/h8/week34.jpg"></div>
+                <div class="item"><img src="../images/h8/week35.jpg"></div>
+                <div class="item"><img src="../images/h8/week36.jpg"></div>
+                <div class="item"><img src="../images/h8/week37.jpg"></div>
+                <div class="item"><img src="../images/h8/week38.jpg"></div>
+                <div class="item"><img src="../images/h8/week39.jpg"></div>
             
             </div>
            
