add github link to footer

--- a/pages/h8.html
+++ b/pages/h8.html
@@ -238,6 +238,7 @@
 
   
   <footer>
+    <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="../index.html">Home </a>
     <a href="mtc.html"> MTC </a>
     <a href="#"> Houston 8 </a>
