--- a/pages/mtc.html
+++ b/pages/mtc.html
@@ -172,6 +172,7 @@
 
 
   <footer>
+    <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="../index.html">Home </a>
     <a href="#"> MTC </a>
     <a href="h8.html"> Houston 8 </a>
