--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
   
   <footer>
+    <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="#">Home </a>
     <a href="/pages/mtc.html"> MTC </a>
     <a href="/pages/h8.html"> Houston 8 </a>
