--- a/pages/sealy.html
+++ b/pages/sealy.html
@@ -110,6 +110,19 @@
     <a href="sealyWeeks/week27.html" >27</a>
     <a href="sealyWeeks/week28.html" >28</a>
     <a href="sealyWeeks/week29.html" >29</a>
+    <a href="sealyWeeks/week30.html" >30</a>
+    <a href="sealyWeeks/week31.html" >31</a>
+    <a href="sealyWeeks/week32.html" >32</a>
+    <a href="sealyWeeks/week33.html" >33</a>
+    <a href="sealyWeeks/week34.html" >34</a>
+    <a href="sealyWeeks/week35.html" >35</a>
+    <a href="sealyWeeks/week36.html" >36</a>
+    <a href="sealyWeeks/week37.html" >37</a>
+    <a href="sealyWeeks/week38.html" >38</a>
+    <a href="sealyWeeks/week39.html" >39</a>
+    <a href="sealyWeeks/week40.html" >40</a>
+    <a href="sealyWeeks/week41.html" >41</a>
+    <a href="sealyWeeks/week42.html" >42</a>
     <a href="sealyWeeks/week19.html">>></a>
 </div>
   
