skeleton galveston pages and finish index.html

--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
           <a class="nav-link" href="/pages/mtc.html">MTC</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/h8.html">Houston 8 Spanish</a>
+          <a class="nav-link" href="/pages/h8.html">Houston 8</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/manvel.html">Manvel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/sealy.html">Sealy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/galveston.html">Galveston</a>
         </li>
       </ul>
     </div>
@@ -64,6 +67,18 @@
           <img src="/images/galvy.jpg"/>
           <h2>Galveston</h2>
         </a></div>
+        <div class="areaTile"><a href="/pages/galveston.html">
+          <img src="/images/mocity.jpg"/>
+          <h2>Missouri City</h2>
+        </a></div>
+        <div class="areaTile"><a href="/pages/galveston.html">
+          <img src="/images/jcgm.jpg"/>
+          <h2>Jones Creek/Grand Mission</h2>
+        </a></div>
+        <div class="areaTile"><a href="/pages/galveston.html">
+          <img src="/images/friendswood.jpeg"/>
+          <h2>Friendswood</h2>
+        </a></div>
       </div>
   </div>
 
@@ -75,6 +90,7 @@
     <a href="/pages/h8.html"> Houston 8 </a>
     <a href="/pages/manvel.html"> Manvel </a>
     <a href="/pages/sealy.html"> Sealy </a>
+    <a href="/pages/galveston.html"> Galveston </a>
   </footer>
 
 
