--- a/pages/galvestonWeeks/week51.html
+++ b/pages/galvestonWeeks/week51.html
@@ -46,7 +46,7 @@
     <h2>Galveston West</h2>
     <h2>December 28, 2020 - March 21, 2021</h2>
   </div>
-  <h2>Week 43</h2>
+  <h2>Week 51</h2>
   <hr>
   <div class="container">
     
@@ -78,23 +78,21 @@
   </div>
 
   <div class="pagination_section">
-    <a href="/pages/sealyWeeks/week42.html"><<</a>
-    <a href="/pages/galveston.html" class="active">43</a>
-    <a href="galvestonWeeks/week44.html" >44</a>
-    <a href="galvestonWeeks/week45.html" >45</a>
-    <a href="galvestonWeeks/week46.html" >46</a>
-    <a href="galvestonWeeks/week47.html" >47</a>
-    <a href="galvestonWeeks/week48.html" >48</a>
-    <a href="galvestonWeeks/week49.html" >49</a>
-    <a href="galvestonWeeks/week50.html" >50</a>
-    <a href="galvestonWeeks/week51.html" >51</a>
-    <a href="galvestonWeeks/week52.html" >52</a>
-    <a href="galvestonWeeks/week53.html" >53</a>
-    <a href="galvestonWeeks/week54.html" >54</a>
-    <a href="galvestonWeeks/week44.html">>></a>
+    <a href="/pages/galveston.html"><<</a>
+    <a href="/pages/galveston.html" >43</a>
+    <a href="week44.html" class="active">44</a>
+    <a href="week45.html" >45</a>
+    <a href="week46.html" >46</a>
+    <a href="week47.html" >47</a>
+    <a href="week48.html" >48</a>
+    <a href="week49.html" >49</a>
+    <a href="week50.html" >50</a>
+    <a href="week51.html" >51</a>
+    <a href="week52.html" >52</a>
+    <a href="week53.html" >53</a>
+    <a href="week54.html" >54</a>
+    <a href="week45.html">>></a>
 </div>
-
-
 
 
   <footer>
