--- a/pages/mtc.html
+++ b/pages/mtc.html
@@ -25,13 +25,16 @@
           <a class="nav-link" href="#">MTC <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/h8.html">Houston 8 Spanish</a>
+          <a class="nav-link" href="/pages/h8.html">Houston 8</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/manvel.html">Manvel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="sealy.html">Sealy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/galveston.html">Galveston</a>
         </li>
       </ul>
     </div>
@@ -124,6 +127,7 @@
     <a href="h8.html"> Houston 8 </a>
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
+    <a href="galveston.html"> Galveston </a>
   </footer>
 
 
