--- a/pages/h8.html
+++ b/pages/h8.html
@@ -24,13 +24,16 @@
           <a class="nav-link" href="mtc.html">MTC</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Houston 8 Spanish <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Houston 8 <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="manvel.html">Manvel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="sealy.html">Sealy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/galveston.html">Galveston</a>
         </li>
       </ul>
     </div>
@@ -119,6 +122,7 @@
     <a href="#"> Houston 8 </a>
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
+    <a href="galveston.html"> Galveston </a>
   </footer>
 
 
