--- a/pages/h8Weeks/week4.html
+++ b/pages/h8Weeks/week4.html
@@ -24,13 +24,16 @@
           <a class="nav-link" href="/pages/mtc.html">MTC</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/h8.html">Houston 8 Spanish <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/pages/h8.html">Houston 8 <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/manvel.html">Manvel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/sealy.html">Sealy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/galveston.html">Galveston</a>
         </li>
       </ul>
     </div>
@@ -126,6 +129,7 @@
     <a href="/pages/h8.html"> Houston 8 </a>
     <a href="/pages/manvel.html"> Manvel </a>
     <a href="/pages/sealy.html"> Sealy </a>
+    <a href="/pages/galveston.html"> Galveston </a>
   </footer>
 
 
