--- a/pages/manvel.html
+++ b/pages/manvel.html
@@ -24,13 +24,16 @@
           <a class="nav-link" href="mtc.html">MTC</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="h8.html">Houston 8 Spanish <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="h8.html">Houston 8 <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Manvel <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="sealy.html">Sealy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/galveston.html">Galveston</a>
         </li>
       </ul>
     </div>
@@ -123,6 +126,7 @@
     <a href="h8.html"> Houston 8 </a>
     <a href="#"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
+    <a href="galveston.html"> Galveston </a>
   </footer>
 
 
