--- a/pages/manvelWeeks/week10.html
+++ b/pages/manvelWeeks/week10.html
@@ -25,13 +25,16 @@
           <a class="nav-link" href="/pages/mtc.html">MTC <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/h8.html">Houston 8 Spanish</a>
+          <a class="nav-link" href="/pages/h8.html">Houston 8</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/manvel.html">Manvel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/sealy.html">Sealy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/galveston.html">Galveston</a>
         </li>
       </ul>
     </div>
@@ -151,6 +154,7 @@
     <a href="/pages/h8.html"> Houston 8 </a>
     <a href="/pages/manvel.html"> Manvel </a>
     <a href="/pages/sealy.html"> Sealy </a>
+    <a href="/pages/galveston.html"> Galveston </a>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
