--- a/pages/sealy.html
+++ b/pages/sealy.html
@@ -25,13 +25,16 @@
           <a class="nav-link" href="/pages/mtc.html">MTC</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/h8.html">Houston 8 Spanish</a>
+          <a class="nav-link" href="/pages/h8.html">Houston 8</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/manvel.html">Manvel</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Sealy <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/galveston.html">Galveston</a>
           </li>
       </ul>
     </div>
@@ -133,6 +136,7 @@
     <a href="h8.html"> Houston 8 </a>
     <a href="manvel.html"> Manvel </a>
     <a href="#"> Sealy </a>
+    <a href="galveston.html"> Galveston </a>
   </footer>
 
 
